testing/tests/ui/filter_block_ws.stderr
error: failed to parse template source
 --> <source attribute>:1:28
  |
       1 | {% filter lower|indent(2) - %}
         |                            ^ close to this token
         |
 --> tests/ui/filter_block_ws.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
